feat: saving state

--- a/_configuration.tex
+++ b/_configuration.tex
@@ -1,6 +1,6 @@
 \newabbrev{\authorname}{Fabian Bliem}
 \newabbrev{\authormail}{fbliem.mmt-b2018@fh-salzburg.ac.at}
-\newabbrev{\titlename}{Pedestrian Route Proposal Satisfaction}
+\newabbrev{\titlename}{Alternative pedestrian route to the shortest path and associated user satisfaction}
 \newabbrev{\advisor}{FH-Prof. DI Dr. Simon Ginzinger, MSc}
 %\newabbrev{\secondadvisor}{Titel Vorname Nachname}
 \newabbrev{\thesisdate}{08.08.2022}
