--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1076,6 +1076,191 @@ title = {{An Introduction to OpenStreetMap in Geographic Information Science: Ex
 volume = {0},
 year = {2015}
 }
+@book{Mardan2014,
+abstract = {This article aims to break new ground in academia by bridging the existing knowledge and practice gap on governance during conflict. It seeks to understand the governance dynamics during conflict in the non-government-controlled parts of Syria. It pays particular attention to civil society and state building processes. In doing so, the study spans historical and geographical width. Historically, to understand the roots of the conflict, it assesses the state-civil society-market dynamics of governance in Syria prior to 2011. Nevertheless, its focus is on contemporary Syria between March, 2011 and May, 2014. Geographically, its particular attention and in-depth analysis is on three areas in the non-government-controlled parts: Al-Raqqa (the city), Deir Ez-zor (Al-Mayadeen and the city) and Aleppo (the city).},
+annote = {Desciption has to be updated!},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Mardan, Azat},
+eprint = {arXiv:1011.1669v3},
+file = {:C\:/Users/fabia/Downloads/Azat Mardan (auth.) - Practical Node.js_ Building Real-World Scalable Web Apps-Apress (2014).pdf:pdf},
+isbn = {9772081415},
+issn = {17549469},
+keywords = {Biafra,Cultural theory,DS92.S9,Ethnic conflict,Fulani,Hausa,Hierarchy,Ibo,Individualism,Journal article,Nigeria,Public Administration,Syria,Syria--History--21st century,Syria--Politics and government,Yoruba,civi war onset,civil war,corporate,economic development,exclusion,global governance,good governance,governance,governance theories,government,icle,indian,lack of accountability,leadership philosophy,poor governance,rebel mobilization,self-governance,syria,the bhagavad-gita,unescap},
+mendeley-groups = {Bacheloarbeit},
+number = {1},
+pages = {37--72},
+pmid = {25246403},
+title = {{Practical Node.js Building Real-World Scalable Web Apps}},
+url = {https://www.researchgate.net/publication/269107473_What_is_governance/link/548173090cf22525dcb61443/download0Ahttp://www.econ.upf.edu/$\sim$reynal/Civil wars_12December2010.pdf0Ahttps://think-asia.org/handle/11540/82820Ahttps://www.jstor.org/stable/41857625},
+volume = {7},
+year = {2014}
+}
+@article{Quddus2007,
+abstract = {Map-matching algorithms integrate positioning data with spatial road network data (roadway centrelines) to identify the correct link on which a vehicle is travelling and to determine the location of a vehicle on a link. A map-matching algorithm could be used as a key component to improve the performance of systems that support the navigation function of intelligent transport systems (ITS). The required horizontal positioning accuracy of such ITS applications is in the range of 1 m to 40 m (95) with relatively stringent requirements placed on integrity (quality), continuity and system availability. A number of map-matching algorithms have been developed by researchers around the world using different techniques such as topological analysis of spatial road network data, probabilistic theory, Kalman filter, fuzzy logic, and belief theory. The performances of these algorithms have improved over the years due to the application of advanced techniques in the map matching processes and improvements in the quality of both positioning and spatial road network data. However, these algorithms are not always capable of supporting ITS applications with high required navigation performance, especially in difficult and complex environments such as dense urban areas. This suggests that research should be directed at identifying any constraints and limitations of existing map matching algorithms as a prerequisite for the formulation of algorithm improvements. The objectives of this paper are thus to uncover the constraints and limitations by an in-depth literature review and to recommend ideas to address them. This paper also highlights the potential impacts of the forthcoming European Galileo system and the European Geostationary Overlay Service (EGNOS) on the performance of map matching algorithms. Although not addressed in detail, the paper also presents some ideas for monitoring the integrity of map-matching algorithms. The map-matching algorithms considered in this paper are generic and do not assume knowledge of 'future' information (i.e. based on either cost or time). Clearly, such data would result in relatively simple map-matching algorithms. {\textcopyright} 2007 Elsevier Ltd. All rights reserved.},
+author = {Quddus, Mohammed A. and Ochieng, Washington Y. and Noland, Robert B.},
+doi = {10.1016/j.trc.2007.05.002},
+file = {:C\:/Users/fabia/Downloads/quddus2007.pdf:pdf},
+issn = {0968090X},
+journal = {Transportation Research Part C: Emerging Technologies},
+keywords = {Map-matching,Research directions,Transport applications},
+mendeley-groups = {Bacheloarbeit},
+number = {5},
+pages = {312--328},
+title = {{Current map-matching algorithms for transport applications: State-of-the art and future research directions}},
+volume = {15},
+year = {2007}
+}
+@article{Bierlaire2009,
+abstract = {If you would like to write for this, or any other Emerald publication, then please use our Emerald for Authors service information about how to choose which publication to write for and submission guidelines are available for all. Please visit www.emeraldinsight.com/authors for more information. About Emerald www.emeraldinsight.com Emerald is a global publisher linking research and practice to the benefit of society. The company manages a portfolio of more than 290 journals and over 2,350 books and book series volumes, as well as providing an extensive range of online products and additional customer resources and services. Abstract We approach pedestrian modeling from a choice perspective. We first identify the list of choices that pedestrians are facing, and identify how each of them has been addressed in the literature. Then, we consider how the framework of discrete choice models may be considered in each case. Our objective is to trigger new ideas and new tracks of research in this particularly challenging field.},
+author = {Bierlaire, Michel and Robin, Thomas},
+doi = {10.1108/9781848557512-001},
+file = {:C\:/Users/fabia/Downloads/bierlaire2009.pdf:pdf},
+isbn = {9781848557512},
+journal = {Pedestrian Behavior},
+mendeley-groups = {Bacheloarbeit},
+pages = {1--26},
+title = {{Pedestrians Choices}},
+year = {2009}
+}
+@article{Kurose2001,
+abstract = {Our aim in this paper is to build and test a model which classifies and identifies pedestrian shopping behaviour in a shopping centre by using temporal and spatial choice heuristics. In particular, the temporal local-distance-minimising, total-distance-minimising, and global-distance-minimising heuristic choice rules and spatial nearest-destination-oriented, farthest-destination-oriented, and intermediate-destination-oriented choice rules are combined to classify and identify the stop sequences and route choices of shopping pedestrians. First, several linear networks with a single entry node and a few stop nodes are investigated. For these networks, the global-distance-minimising and spatial choice heuristics classify and identify the sequences of stops very well. Although the local-distance-minimising choice rule identifies pedestrian route choice quite well, another heuristic is needed to improve the identification. In this paper a new, attractive-street-oriented heuristic is suggested to improve the identification ability of the model. This choice rule suggests that shopping pedestrians will never leave the attractive shopping streets before completing their shopping. The model is then applied to empirical data of pedestrian shopping behaviour in Veldhoven City Centre in The Netherlands. The findings of this application suggest that the model based on choice heuristics might be useful to classify and identify the sequences of stops and route choice behaviour of shopping pedestrians in a shopping centre.},
+author = {Kurose, Shigeyuki and Borgers, Aloys W.J. and Timmermans, Harry J.P.},
+doi = {10.1068/b2622},
+file = {:C\:/Users/fabia/Downloads/kurose2001.pdf:pdf},
+issn = {02658135},
+journal = {Environment and Planning B: Planning and Design},
+mendeley-groups = {Bacheloarbeit},
+number = {3},
+pages = {405--418},
+title = {{Classifying pedestrian shopping behaviour according to implied heuristic choice rules}},
+volume = {28},
+year = {2001}
+}
+@article{Borst2008,
+abstract = {Walking is important for the health of elderly people. Previous studies have found a relationship between neighbourhood characteristics, physical activity and related health aspects. The multivariate linear regression model presented here describes the relationships between the perceived attractiveness of streets for walking along and (physical) street characteristics. Two hundred and eighty-eight independently living elderly people (between 55 and 80 years old) participated in the study. Street characteristics were assessed along homogeneous street subsections defined as 'links'. Positively related to perceived attractiveness of links were the following street characteristics: slopes and/or stairs, zebra crossings, trees along the route, front gardens, bus and tram stops, shops, business buildings, catering establishments, passing through parks or the city centre, and traffic volume. Litter on the street, high-rise buildings, and neighbourhood density of dwellings were negatively related to perceived link attractiveness. Overall, the results suggest that three main aspects affect perceived attractiveness of streets for walking, namely tidiness of the street, its scenic value and the presence of activity or other people along the street. The results are discussed within the context of these three aspects. {\textcopyright} 2008 Elsevier Ltd. All rights reserved.},
+author = {Borst, Hieronymus C. and Miedema, Henk M.E. and de Vries, Sanne I. and Graham, Jamie M.A. and van Dongen, Jef E.F.},
+doi = {10.1016/j.jenvp.2008.02.010},
+file = {:C\:/Users/fabia/Downloads/borst2008.pdf:pdf},
+issn = {02724944},
+journal = {Journal of Environmental Psychology},
+keywords = {Elderly people,Pedestrians,Perceived attractiveness,Physical environment,Walking},
+mendeley-groups = {Bacheloarbeit},
+number = {4},
+pages = {353--361},
+title = {{Relationships between street characteristics and perceived attractiveness for walking reported by elderly people}},
+volume = {28},
+year = {2008}
+}
+@article{Daamen2005,
+abstract = {In assessing the design of a public transfer station, it is important to be able to predict the routes taken by passengers. Most simulation tools use simple route choice models that take into account only the shortest walking distance or walking time between a passenger's origin and destination. To improve this type of route choice model, other factors affecting passenger route choice need to be identified. Also, the way these factors influence route choice behavior needs to be determined to indicate how each factor is valued. In this research, route choice data have been collected in two Dutch train stations by following passengers through the facility from their origins to their destinations. These data have been used to estimate extended route choice models. The focus is on the influences of level changes in walking routes on passenger route choice behavior. It appears that ways of bridging level changes (ramps, stairs, escalators) each have a significant and different impact on the attractiveness of a route to a traveler.},
+author = {Daamen, Winnie and Bovy, Piet H. L. and Hoogendoorn, Serge P.},
+doi = {10.1177/0361198105193000102},
+file = {:C\:/Users/fabia/Downloads/daamen2005.pdf:pdf},
+issn = {0361-1981},
+journal = {Transportation Research Record: Journal of the Transportation Research Board},
+mendeley-groups = {Bacheloarbeit},
+number = {1},
+pages = {12--20},
+title = {{Influence of Changes in Level on Passenger Route Choice in Railway Stations}},
+volume = {1930},
+year = {2005}
+}
+@article{Millonig2007,
+abstract = {Based on studies about human orientation behaviour, the contribution presents a synopsis of main requirements for pedestrian navigation systems, focussing on the key qualities for designing pedestrian wayfinding systems and the consideration of landmarks as spatial information in portable pedestrian navigation services (e.g. in smart phones, PDA's, etc.). Mobile navigation services can enable pedestrians to achieve precise spatial information; yet the actual systems are not responsive to individual preferences of route characteristics. In contrast to car drivers, pedestrians are characterized by several specific attributes: they are sensitive in terms of distance, acclivity and climatic conditions; they need salient landmarks for orientation and try to minimize the extent of mental work during the navigational process. Therefore, pedestrian navigation services have to offer a wider range of route qualities: e.g. convenience, attractiveness or safety. To provide efficient navigational information for pedestrians, the consideration of three main route qualities is required: topography (physical quality), topology/attractiveness (psychological quality) and complexity (mental quality). Additionally, the defi nition of specific route characteristics is of great importance for the simulation of pedestrian flows to imitate route choice behaviour. We give an outline of the most important design qualities for the development of route networks suitable for pedestrians' needs.},
+author = {Millonig, A. and Schechtner, K.},
+doi = {10.1007/978-3-540-47064-9_10},
+file = {:C\:/Users/fabia/Downloads/decision-loads-and-route-qualities-for-pedestrians--key-requirem.pdf:pdf},
+journal = {Pedestrian and Evacuation Dynamics 2005},
+mendeley-groups = {Bacheloarbeit},
+pages = {109--118},
+title = {{Decision Loads and Route Qualities for Pedestrians — Key Requirements for the Design of Pedestrian Navigation Services}},
+year = {2007}
+}
+@article{Kounadi2013,
+abstract = {Reverse geocoding is defined as the extraction of textual information, such as a name or an address, from geographic coordinates. This technique is common in many geo-application scenarios, e.g., in freely available online-based mapping services. However, if personal data are mapped, confidentiality issues may arise, such as if the data are derived from a crime-incidents database. This research provides an evaluation of seven freely available Web mapping services in regard to reverse geocoding accuracy and privacy aspects. The services' textual accuracy is measured using crime data from Vienna, Austria. The accuracy associated with reverse geocoding is derived for districts with different residential densities to determine whether any error variation is associated with the underlying residential structure. Furthermore, this research investigates the reidentification risk when compromising personal information. Using a free online telephone database and addresses in a crime-incidents dataset, the probable names that are linked to crime victims are identified. The results showed that the accuracy ranges from 0 to 23 depending on the predefined precision level. Comparing seven online reverse geocoding services (TravelGIS, Google Maps, nominatim, ArcGIS, Yahoo, Bing, and Geonames), TravelGIS performs better at the highest precision level, whereas Geonames performs better at a lower precision level. However, the results showed no difference among the districts with different residential densities. As for the reidentification risk, 68 probable victims were identified from the database. This work discusses the specific tasks that users have to complete when retrieving addresses associated with crime-incident locations. The article concludes with an evaluation of the reverse geocoding process and a discussion of the privacy risk associated with it. {\textcopyright} 2013 Cartography and Geographic Information Society.},
+author = {Kounadi, Ourania and Lampoltshammer, Thomas J. and Leitner, Michael and Heistracher, Thomas},
+doi = {10.1080/15230406.2013.777138},
+file = {:C\:/Users/fabia/Downloads/kounadi2013.pdf:pdf},
+issn = {15230406},
+journal = {Cartography and Geographic Information Science},
+keywords = {Accuracy,Crime data,Geoprivacy,Reverse geocoding},
+mendeley-groups = {Bacheloarbeit},
+number = {2},
+pages = {140--153},
+title = {{Accuracy and privacy aspects in free online reverse geocoding services}},
+volume = {40},
+year = {2013}
+}
+@article{Ratcliffe2001,
+abstract = {In many applications of Geographical Information Systems (GIS) a common task is the conversion of addresses into grid coordinates. In many countries this is usually accomplished using address range TIGER-type files in conjunction with geocoding packages within a GIS. Improvements in GIS functionality and the storage capacity of large databases mean that the spatial investigation of data at the individual address level is now commonly performed. This process relies on the accuracy of the geocoding mechanism and this paper examines this accuracy in relation to cadastral records and census tracts. Results from a study of over 20 000 addresses in Sydney, Australia, using a TIGER-type geocoding process suggest that 5-7.5 (depending on geocoding method) of addresses may be misallocated to census tracts, and more than 50 may be given coordinates within the land parcel of a different property.},
+author = {Ratcliffe, J. H.},
+doi = {10.1080/13658810110047221},
+file = {:C\:/Users/fabia/Downloads/ratcliffe2001.pdf:pdf},
+issn = {13658816},
+journal = {International Journal of Geographical Information Science},
+mendeley-groups = {Bacheloarbeit},
+number = {5},
+pages = {473--485},
+title = {{On the accuracy of TIGER-type geocoded address data in relation to cadastral and census areal units}},
+volume = {15},
+year = {2001}
+}
+@article{Goldberg2013,
+author = {Goldberg, Daniel and Goldberg, Morven and Ballard, James and Boyd, Narelle and Mullan, Carol and Garfield, Diana and Rosman, Anna and Ferrante, James and Semmens},
+file = {:C\:/Users/fabia/Downloads/1476-072X-12-50.pdf:pdf},
+isbn = {1476-072X},
+journal = {International Journal of Health Geographics},
+keywords = {correspondence,daniel,edu,geocoding,georeferencing,goldberg,health records,postal address data,record linkage,tamu},
+mendeley-groups = {Bacheloarbeit},
+number = {1},
+pages = {50},
+title = {{An evaluation framework for comparing geocoding systems}},
+url = {http://sfx.lis.curtin.edu.au/sfx_local?sid=google&auinit=DW&aulast=Goldberg&atitle=An evaluation framework for comparing geocoding systems&id=doi%3A10.1186%2F1476-072X-12-50&title=International Journal of Health Geographics&volume=12&issue=1&date=2013&spa},
+volume = {12},
+year = {2013}
+}
+@article{Quddus2003,
+abstract = {This paper describes a map-matching algorithm designed to support the navigational functions of a real-time vehicle performance and emissions monitoring system currently under development, and other transport telematics applications. The algorithm is used together with the outputs of an extended Kalman filter formulation for the integration of GPS and dead reckoning data, and a spatial digital database of the road network, to provide continuous, accurate and reliable vehicle location on a given road segment. This is irrespective of the constraints of the operational environment, thus alleviating outage and accuracy problems associated with the use of stand-alone location sensors. The map-matching algorithm has been tested using real field data and has been found to be superior to existing algorithms, particularly in how it performs at road intersections.},
+author = {Quddus, Mohammed A. and Ochieng, Washington Yotto and Zhao, Lin and Noland, Robert B.},
+doi = {10.1007/s10291-003-0069-z},
+file = {:C\:/Users/fabia/Downloads/quddus2003.pdf:pdf},
+isbn = {4420759461},
+issn = {15211886},
+journal = {GPS Solutions},
+keywords = {GPS,Land vehicle navigation,Map-matching,Optimal estimation,Transport telematics},
+mendeley-groups = {Bacheloarbeit},
+number = {3},
+pages = {157--167},
+title = {{A general map matching algorithm for transport telematics applications}},
+volume = {7},
+year = {2003}
+}
+@article{Greenfeld2002,
+abstract = {GPS based navigation and route guidance systems are becoming increasingly popular among bus operators, fleet managers and travelers. To provide this functionality, one has to have a GPS receiver, a digital map of the traveled network and software that can associate (match) the user's position with a location on the digital map. Matching the user's location has to be done even when the GPS location and the underlying digital map have inaccuracies and errors. There are several approaches for solving this map matching task. Some only match the user's location to the nearest street node while others are able to locate the user at specific location on the traveled street segment. In this paper a topologically based matching procedure is presented. The procedure was tested with low quality GPS data to assess its robustness. The performance of the algorithms was found to produce outstanding results},
+author = {Greenfeld, Joshua S},
+file = {:C\:/Users/fabia/Downloads/MatchingGPSObservationstoLocationsonaDigitalMap.pdf:pdf},
+issn = {00283940},
+journal = {Transportation Research Board},
+keywords = {and navigation,global positioning system,gps,map matching,route guidance},
+mendeley-groups = {Bacheloarbeit},
+number = {3},
+pages = {13},
+pmid = {10344521},
+title = {{Matching GPS Observations to Locations on a Digital Map}},
+year = {2002}
+}
+@article{Ochieng2003,
+abstract = {Global Navigation Satellite Systems (GNSS) such as GPS and digital road maps can be used for land vehicle navigation systems. However, GPS requires a level of augmentation with other navigation sensors and systems such as Dead Reckoning (DR) devices, in order to achieve the required navigation performance (RNP) in some areas such as urban canyons, streets with dense tree cover, and tunnels. One of the common solutions is to integrate GPS with DR by employing a Kalman Filter (Zhao et al., 2003). The integrated navigation systems usually rely on various types of sensors. Even with very good sensor calibration and sensor fusion technologies, inaccuracies in the positioning sensors are often inevitable. There are also errors associated with spatial road network data. This paper develops an improved probabilistic Map Matching (MM) algorithm to reconcile inaccurate locational data with inaccurate digital road network data. The basic characteristics of the algorithm take into account the error sources associated with the positioning sensors, the historical trajectory of the vehicle, topological information on the road network (e.g., connectivity and orientation of links), and the heading and speed information of the vehicle. This then enables a precise identification of the correct link on which the vehicle is travelling. An optimal estimation technique to determine the vehicle position on the link has also been developed and is described. Positioning data was obtained from a comprehensive field test carried out in Central London. The algorithm was tested on a complex urban road network with a high resolution digital road map. The performance of the algorithm was found to be very good for different traffic maneuvers and a significant improvement over using just an integrated GPS/DR solution.},
+author = {Ochieng, Washington Yotto and Quddus, M. and Noland, Robert B.},
+file = {:C\:/Users/fabia/Downloads/Quddus 1.pdf:pdf},
+keywords = {dead-reckoning,global positioning system,intelligent,kalman filter,map matching,transport telematics,transportation system},
+mendeley-groups = {Bacheloarbeit},
+pages = {2--3},
+title = {{Map-Matching in complex urban road networks}},
+year = {2003}
+}
+
 
 
 
